Implementar Proceso batch y nuevo endpoint para instanciar servicio notificar clicks
